# cluedo-app

./: .gitignore  .yarnrc.yml  Dockerfile  biome.json  datamodel.dbml  docker-compose.yml  index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
server/: .dockerignore  .gitignore  Cargo.toml
server/prisma/: schema.prisma
server/prisma-cli/: Cargo.toml
server/src/: game_data.rs  game_id.rs  main.rs  user.rs  user_id.rs
src/: App.vue  main.ts
src/components/: CardList.vue  CardModal.vue  CardSection.vue  FormControl.vue  LoadGameButton.vue  MainTable.vue  Modal.vue  PlayerList.vue  PlayerModal.vue  PlayerSection.vue  QuestionList.vue  QuestionListRow.vue  QuestionModal.vue  SaveGameButton.vue  Toolbar.vue
src/locales/: de.json  en.json
src/pages/: app.vue  index.vue
src/store/: apiStore.ts  cardStore.ts  gameDataStore.ts  gameStore.ts  languageStore.ts  playerCardRelationStore.ts  playerStore.ts  questionStore.ts
src/types/: Data.d.ts  api.ts  validators.ts
