[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Chrono for date and time things
chrono = "0.4.23"
dotenv = "0.15.0"
# Rocket is the webserver
rocket = {version = "0.5.0-rc.2", features = ["json"]}
# Serde for deserialization and serialization
serde = { version = "1.0.152", features = ["derive"] }
