[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cluedo_app"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
# Rocket is the webserver
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
# Serde for deserialization and serialization
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.103"
ulid = "1.0.0"
